--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,15 +46,29 @@
   <div class="container">
     <div class="row">
       <div class="col-md-1"></div>
-      <div class="col-md-9">
+      <div class="col-md-8">
       <div class="sample-text">
         <p>We Bring</p>
-        <h1>Digital Transformation</h1>
+        <div class="rw-wrapper">
+          <h2 class="rw-sentence">
+            <div class="rw-words rw-words-1">
+              <span>Digital Transformation</span>
+              <span>Process We Alignment</span>
+              <span>Harmony</span>
+              <span>Imagination</span>
+              <span>Innovation</span>
+              <span>Creativity</span>
+            </div>
+          </h2>
+        </div>
         <div class="step-image">
           <img src="/assets/images/sample/line.svg" />
         </div>
-        <h2>Through Design</h2>
+        <h1>Through Design</h1>
       </div>
+    </div>
+    <div class="col-md-1">
+      <div class="horizontal"></div>
     </div>
     <div class="col-md-2">
       <div class="text">
