--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -61,10 +61,10 @@
             </div>
           </h2>
         </div>
+        <h1>Through Design</h1>
         <div class="step-image">
           <img src="/assets/images/sample/line.svg" />
         </div>
-        <h1>Through Design</h1>
       </div>
     </div>
     <div class="col-md-1">
@@ -195,7 +195,7 @@
 
       <div class="row service-button">
         <div class="col-md-12">
-        <a class="bttn" routerLink="/services/user-experience" >READ MORE</a> 
+        <a class="bttn" routerLink="/cater" >READ MORE</a> 
       </div>
       </div>
   </div>
