--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -60,11 +60,11 @@
             </div>
           </h2>
         </div>
-        <h1>Through Design</h1>
+        <h1>through Design</h1>
         <div class="step-image">
           <img src="/assets/images/sample/line.svg" />
         </div>
-        <h1>through Design</h1>
+        <!-- <h1>through Design</h1> -->
       </div>
     </div>
     <div class="col-md-1">
